--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,9 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt  # 如果有 requirements.txt，請確保在項目根目錄中
+          pip install google
+          pip install google-generativeai
+          pip install discord
           
       - name: Run Discord Bot
         run: |
