--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip 
           pip install google
-          pip install --upgrade google-generativeai
+          pip install google-generativeai
           pip install discord
           pip install --upgrade discord.py
           pip install python-dotenv
