--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip 
           pip install google
-          pip install -U google-generativeai
+          pip install google-generativeai==0.2.0
           pip install discord
           pip install -U discord.py
           pip install python-dotenv
