--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip 
           pip install google
-          pip install google-generativeai==0.8.3
+          pip install google-generativeai
           pip install discord
           pip install -U discord.py
           pip install python-dotenv
